fix: selected result text-overflow: ellipsis

--- a/src/components/dropdown-selector.less
+++ b/src/components/dropdown-selector.less
@@ -49,6 +49,7 @@
     min-height: 28px;
 
     .selector__option {
+      position: relative;
       margin: 4px 4px 0 0;
       background-color: #f0f2f5;
       border-radius: 4px;
@@ -56,18 +57,20 @@
       font-size: 14px;
       height: 24px;
       line-height: 24px;
-      padding: 0 8px;
+      padding: 0 24px 0 8px;
       display: inline-block;
+      white-space: nowrap;
+      max-width: calc(100% - 34px);
 
       &-text {
-        display: inline-block;
         color: #999;
         cursor: default;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
 
       &-close {
-        position: relative;
-        display: inline-block;
+        position: absolute;
         background-color: #999;
         cursor: pointer;
         width: 12px;
@@ -75,6 +78,9 @@
         border-radius: 12px;
         vertical-align: middle;
         opacity: .6;
+        right: 8px;
+        top: 50%;
+        margin-top: -6px;
 
         &:hover {
           opacity: 1;
